# gjallarhorn-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  monitor.rs  settings.rs  utils.rs
ui/: appwindow.slint  components.slint  information_view.slint  structs.slint  usage_view.slint
