[package]
name = "heimdall-rs"
version = "0.1.0"
authors = ["Arunkumar Mourougappane <amouroug@buffalo.edu>"]
edition = "2021"
description = "A modern, cross-platform system resource monitor written in Rust and Slint."
license = "MIT"
repository = "https://github.com/arunkumar-mourougappane/heimdall-rs"
keywords = ["system", "monitor", "gui", "slint", "utility"]
categories = ["gui", "system-programming", "visualization"]

[dependencies]
slint = "1.8.0"
sysinfo = "0.33.0"
nvml-wrapper = "0.9"
default-net = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
directories = "6.0.0"

[build-dependencies]
slint-build = "1.8.0"
